@@ -1,3 +1,7 @@
+2013-06-26  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* config/tc-mips.c (validate_mips_insn): Use STYPE rather than SHAMT.
+
 2013-06-25  Maciej W. Rozycki  <macro@codesourcery.com>
 
 	* config/tc-mips.c (mips_set_options): Add insn32 member.
